--- a/todo_app/index.html
+++ b/todo_app/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>React</title>
+        <title>To Do App</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./css/todo.css">
     </head>
+
+    <body>
+        <input id="task"><button id="add">Add Item</button>
+        <hr>
+        <div id="todos"></div>
+
+        
+    <div class="foot-container">
+        <footer>
+            <p>&copy Author: Anthony Baldoza, <a href="mailto:aj.baldoza@yahoo.com">aj.baldoza@yahoo.com</a></p>
+            
+        </footer>
+    </div>
+
+        <script src="js/todo.js"></script>
+    </body>
 </html>
